--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon May 22 08:42:28 CEST 2017
-sdk.dir=C\:\\Users\\jesus.salas\\AppData\\Local\\Android\\Sdk
+#Fri May 26 19:16:00 CEST 2017
+sdk.dir=C\:\\Users\\jezuz1n\\AppData\\Local\\Android\\Sdk
