--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
     <permission
@@ -54,9 +55,8 @@
         <activity
             android:name=".register.RegisterActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".index.IndexShopActivity"></activity>
-        <activity
-            android:name=".index.IndexClientActivity"/>
+        <activity android:name=".index.IndexShopActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".index.IndexClientActivity" android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
